--- a/style.css
+++ b/style.css
@@ -81,10 +81,10 @@ li a{
     display: block;
     text-decoration: none;
 }
-/* li a:hover{
-    /* background-color: rgb(52, 52, 52); */
-    /* color: rgb(91, 212, 101); */
-/* }*/ 
+li a:hover{
+    background-color: rgb(52, 52, 52); 
+    color: rgb(91, 212, 101); 
+ }
 
 
 
