--- a/style.css
+++ b/style.css
@@ -90,7 +90,9 @@ li a:hover{
 
 /* general content */
 
-
+b{
+    justify-content: ;
+}
 
 .firstyear img, .secondyear img, .thirdyear img, .fourthyear img{
     margin-top: 5%;
@@ -173,8 +175,8 @@ img{
 }
 
 .home img{
-    width: 45%;
-    height: 40vw;
+    width: 35%;
+    height: 35vw;
     left: 1.7%;
 }
 
@@ -221,4 +223,43 @@ footer{
     background-color: rgb(232, 232, 232);
     color: green;
     box-shadow: 0px 0px 9px rgb(18, 102, 63);
+}
+
+
+@media only screen and (max-width: 750px) {
+
+    .home{
+        background: linear-gradient(rgba(44, 44, 44, 0.8), rgba(11, 11, 11, 0.8)), url(https://external-preview.redd.it/LfBFOhWml1RGukZr3iDjwmtlc0fcS_W8YoJlhk7EYkg.jpg?auto=webp&s=f862c421c5d32d2b54ba67830d65685207ca71f9);
+        background-size:cover;
+        background-clip: content-box;
+        background-repeat: no-repeat;
+        flex-direction: column-reverse;
+    }
+    
+    .firstyear, .thirdyear, .secondyear,.fourthyear{
+        flex-direction: column-reverse;
+        justify-content: center;
+        background-color: rgb(30, 37, 44);
+        background: linear-gradient(rgba(35, 39, 44,0.85), rgba(32, 39, 40, 0.85)), url(https://t4.ftcdn.net/jpg/03/17/10/31/240_F_317103153_30l4TcizhBYAa9gkCJ95YMsDam2FVhGO.jpg);
+        background-position: 30% 10%;
+        background-size:cover;
+        background-clip: content-box;
+        background-repeat: no-repeat;
+    }   
+
+    .content {
+        padding-top: 30%;
+        text-align: center;
+        margin-bottom: 10%;
+        font-size: clamp(13px,2.2vw,18px);
+        line-height: 1.625;
+    }
+
+    img,.home img{
+        position: relative;
+        top: 10%;
+        left:33%;
+    }
+    
+    
 }
